# VISTA

./: .gitignore  README.md  requirements.txt
src/bayesian_search/: README.md  package.xml  setup.cfg  setup.py
src/bayesian_search/bayesian_search/: bayesian_search_server.py
src/demo_behaviors/: CMakeLists.txt  README.md  package.xml
src/demo_behaviors/behavior_trees/: bayesian_search.xml  main_tree.xml  nbv_on_target.xml  test_detect.xml
src/demo_behaviors/config/: models.xml
src/demo_behaviors/include/demo_behaviors/behaviors/: detect_and_sort_queue.hpp  dubins_client.hpp  get_next_search_pose.hpp  is_queue_not_empty.hpp  is_within_time_limit.hpp  mark_target_complete.hpp  path_length_client.hpp  sample_view_poses_helix.hpp
src/demo_behaviors/launch/: demo_mission_launch.py
src/demo_behaviors/src/: run_bt.cpp
src/demo_behaviors/src/behaviors/: detect_and_sort_queue.cpp  dubins_client.cpp  get_next_search_pose.cpp  is_queue_not_empty.cpp  is_within_time_limit.cpp  mark_target_complete.cpp  path_length_client.cpp  sample_view_poses_helix.cpp
src/eca_a9_description/: CMakeLists.txt  package.xml
src/eca_a9_description/launch/: display.launch.py
src/eca_a9_description/urdf/: eca_a9_visual.urdf.xacro
src/helix_generator/: package.xml  setup.cfg  setup.py
src/helix_generator/helix_generator/: generate_helix.py  helix_function.py  helix_server.py
src/sensor_model/: README.md  package.xml  setup.cfg  setup.py
src/sensor_model/assets/: generate_flat_plane.py  generate_seabed.py  inspect_mesh.py
src/sensor_model/config/: env_50x50_centroidBox.yaml  env_50x50_cluster.yaml  env_50x50_cluster_seabed.yaml  environment_50x50.yaml  environment_basic.yaml  environment_seabed_basic.yaml  nbv_params.yaml
src/sensor_model/launch/: sensor_test.launch.py
src/sensor_model/rviz/: sensor_test.rviz
src/sensor_model/sensor_model/: compute_intrinsics.py  depth_subscriber_test.py  depth_test.py  meshes_rviz.py  pose_marker_test.py  ray_casting_core.py  sensor_publisher.py  suzanne_rviz.py
src/uuv_interfaces/: CMakeLists.txt  package.xml
src/uuv_interfaces/action/: PoseToPose.action
src/uuv_interfaces/msg/: FaceHits.msg
src/uuv_interfaces/srv/: BayesianSearch.srv  DubinsLengths.srv  GenerateHelix.srv  PauseDrift.srv  ResumeDrift.srv
src/vista_sim/: README.md  package.xml  setup.cfg  setup.py
src/vista_sim/config/: vista_sim.rviz
src/vista_sim/launch/: vista_sim_launch.py
src/vista_sim/vista_sim/: drift_service.py  dubins_pose_to_pose_action_client.py  dubins_pose_to_pose_action_server.py  dubins_test.py  path_lengths_server.py  simple_sonar_sim.py  simple_vehicle_sim_v2.py  simple_vehicle_sim_v3.py  test_convergence.py
