<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bayesian_search</name>
  <version>0.0.0</version>
  <description>Bayesian search algorithm for multi-target underwater inspection</description>
  <maintainer email="talal.alotaibi@utexas.edu">talal</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>uuv_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
