<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_behaviors</name>
  <version>0.0.0</version>
  <description>Behavior tree nodes and trees for UUV NBV mission</description>
  <maintainer email="talal.alotaibi@utexas.edu">talal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>uuv_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>nbv_behaviors</depend>
  <depend>nrg_behaviors</depend>
  <depend>nrg_utility_behaviors</depend>

  <!-- Runtime-only deps for launch file (not built against, but launched) -->
  <exec_depend>vista_sim</exec_depend>
  <exec_depend>helix_generator</exec_depend>
  <exec_depend>nbv_cpp</exec_depend>
  <exec_depend>sensor_model</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
