<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vista_sim</name>
  <version>0.0.1</version>
  <description>Simulation package for Dubins-based vehicle path planning and execution.</description>
  <maintainer email="talal.alotaibi@utexas.edu">talal</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>uuv_interfaces</depend>
  <exec_depend>pydubins</exec_depend>
  <exec_depend>eca_a9_description</exec_depend>
  <exec_depend>sensor_model</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>


  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
